# aip-v19-2023

001/: CMakeLists.txt
001/inc/: Clerk.h  ClerkSt.h
001/sample/: LR_1_1.cpp  LR_1_2.cpp
001/src/: Clerk.cpp  ClerkSt.cpp  main.cpp  main1.cpp
002/: CMakeLists.txt
002/inc/: Curd.h  DairyProducts.h  Food.h
002/src/: Curd.cpp  DairyProducts.cpp  Food.cpp  main.cpp
003/: CMakeLists.txt
003/inc/: Food.h
003/src/: Curd.cpp  DairyProducts.cpp  Food.cpp  main.cpp
004/: CMakeLists.txt
004/inc/: Bull.h  Human.h  Satyr.h
004/src/: Bull.cpp  Human.cpp  Satyr.cpp  main.cpp
